fixed branch pulling for jitsi-meet-web

--- a/.github/workflows/fiesta-ci.yml
+++ b/.github/workflows/fiesta-ci.yml
@@ -44,12 +44,13 @@ jobs:
                 git commit -m "committing changes before switching branches"
                 git clone github-trs-jitsi-meet:TheRealStart/jitsi-meet.git .
                 git checkout "$CUSTOM_TRS_JITSI_MEET_BRANCH"
+                git pull origin "$CUSTOM_TRS_JITSI_MEET_BRANCH"
               else
                 git fetch
                 git add .
                 git commit -m "committing changes before switching branches"
                 git checkout "$CUSTOM_TRS_JITSI_MEET_BRANCH"
-                git pull
+                git pull origin "$CUSTOM_TRS_JITSI_MEET_BRANCH"
               fi
               export NODE_OPTIONS=--max_old_space_size=4096
               sudo npm install -g npm@latest
