--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "@tensorflow-models/body-pix": "2.0.4",
     "@tensorflow/tfjs": "1.5.1",
     "@webcomponents/url": "0.7.1",
-    "amplitude-js": "7.1.1",
-    "base64-js": "1.3.1",
+    "amplitude-js": "4.5.2",
+    "aws-sdk": "^2.741.0",
+    "axios": "^0.20.0",
     "bc-css-flags": "3.0.0",
     "dropbox": "4.0.9",
     "focus-visible": "5.1.0",
