--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@tensorflow/tfjs": "1.5.1",
     "@webcomponents/url": "0.7.1",
     "amplitude-js": "4.5.2",
+    "aws-sdk": "^2.741.0",
+    "axios": "^0.20.0",
     "bc-css-flags": "3.0.0",
     "dropbox": "4.0.9",
     "i18n-iso-countries": "3.7.8",
