--- a/.github/workflows/fiesta-ci.yml
+++ b/.github/workflows/fiesta-ci.yml
@@ -102,7 +102,8 @@ jobs:
     - name: Restart Jitsi Videobridge in us-east-1
       uses: fifsky/ssh-action@master
       with:
-        command: sudo /etc/init.d/jitsi-videobridge2 restart
+        command: |
+          sudo /etc/init.d/jitsi-videobridge2 restart
         host: ${{ secrets.FIESTA_MEET_US_EAST_1 }}
         args: -tt
         user: ubuntu
