--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "stackblur-canvas": "2.3.0",
     "styled-components": "3.4.9",
     "util": "0.12.1",
-    "uuid": "3.1.0",
+    "uuid": "^3.1.0",
     "windows-iana": "^3.1.0",
     "xmldom": "0.1.27",
     "zxcvbn": "4.4.2"
